k8s/stateful-blogapp/deployment.yaml
# This is the specification for the deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-deployment
  labels:
    app: blogapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blogapp

  # Template helps create the pod.
  # This is a specification for the pods creation.
  template:
    metadata:
      labels:
        app: blogapp
    spec:
      containers:
        - name: blogapp-container
          image: pt03b/blog-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
