k8s/stateful-blogapp/mysql-stateful.yaml
# This is the specification for the deployment.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful
  labels:
    app: mysql
spec:
  serviceName: mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql

  # Template helps create the pod.
  # This is a specification for the pods creation.
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql:9.7.2
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
      # pod spec ends here

  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
      # volumes:
      #   - name: mysql-storage
      #     persistentVolumeClaim:
      #       claimName: mysql-pvc

      # - name: mysql-storage
      #   hostPath:
      #     path: /data/mysql
      #     type: DirectoryOrCreate

      # - name: mysql-storage
      #   emptyDir: {}
