k8s/stateful-blogapp/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service

spec:
  clusterIP: None
  selector:
    app: mysql

  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
    # ClusterIP is used to access within the cluster.
  #type: ClusterIP
  type: ClusterIP
