k8s/stateful-blogapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogapp-service

spec:
  selector:
    app: blogapp

  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8080
    # ClusterIP is used to access within the cluster.
  #type: ClusterIP
  type: LoadBalancer
